# VoteApp

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DecryptSys.cpp  EncryptSys.cpp  KeysGeneration.cpp
app/src/main/cpp/include/: numeric_functions.h
app/src/main/java/com/example/m1/: ClientEndpoint.java  MainActivity.java  WebSocketClientEndpoint.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
